<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/block_background"
              android:layout_gravity="center"
              android:layout_margin="10dp"
              android:scaleType="centerCrop"
              android:id="@+id/block_ads">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:orientation="vertical" android:id="@+id/line1_ads">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/name_block_ads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView8" android:layout_weight="1"
                    android:textAlignment="center" android:textColor="#000000" android:textSize="18sp"/>
            <TextView
                    android:text="X"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:background="@drawable/button_press_blak_rose"
                    android:layout_gravity="right"
                    android:id="@+id/button_close_block_ads"/>
        </LinearLayout>
        <TextView
                android:text="@string/description_block_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/text_block_ads" android:textColor="#000000"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/line2_ads">
            <Button
                    android:text="@string/temporary_disabling_ads"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/temporary_disabling_ads"
                    android:layout_weight="1" android:textSize="12sp"/>
            <Button
                    android:text="@string/developer_support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/developer_support" android:layout_weight="1"
                    android:textColor="#000000" android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>