<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/main_fon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/imageView2"
            android:scaleType="centerCrop"/>
    <ImageView
            android:layout_gravity="right"
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/help" android:id="@+id/imageView5"
            tools:layout_editor_absoluteX="332dp" tools:ignore="MissingConstraints"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/ads" android:id="@+id/imageView6"
            tools:ignore="MissingConstraints"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <TextView
                android:text="@string/game_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="10"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:typeface="sans"
                android:id="@+id/textView" android:textSize="70sp" android:textColor="#B3000000"
                android:textAllCaps="false" android:fontFamily="@font/marck_script"/>
        <Button
                android:text="@string/start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_press_blak_rose"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/start" android:textSize="24sp"/>
        <Button
                android:text="@string/standart_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_press_blak_rose"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/mode" android:textSize="24sp"/>
        <Button
                android:text="@string/achievement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_press_blak_rose"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:id="@+id/about_game" android:textSize="24sp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>